--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,19 @@
         android:name=".app.BaseApplication"
         tools:targetApi="31">
 
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/path_provider" />
+        </provider>
+
+        <activity
+            android:name="com.canhub.cropper.CropImageActivity"/>
+
         <meta-data android:name="io.appmetrica.analytics.push.default_notification_icon"
             android:resource="@drawable/ic_launcher_background"/>
 
