--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ common = "18.10.0"
 roomRuntime = "2.6.1"
 googleServices = "4.4.1"
 firebaseMessaging = "23.4.1"
+composeMaterial = "1.3.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
