--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,10 +13,14 @@ lifecycleRuntimeKtx = "2.7.0"
 activityCompose = "1.8.2"
 composeBom = "2023.08.00"
 common = "18.10.0"
+composeNavigation = "2.8.0-alpha08"
+serialization = "1.6.3"
 roomRuntime = "2.6.1"
 googleServices = "4.4.1"
 firebaseMessaging = "23.4.1"
 composeMaterial = "1.3.1"
+navigationCompose = "2.7.7"
+navigationRuntimeKtx = "2.7.7"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
